--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.2.1",
     "react-grid-system": "^7.1.1",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.0",
