--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-ga": "^3.2.1",
     "react-grid-system": "^7.1.1",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
