--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.2.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-grid-system": "^7.1.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
